--- a/code/public/index.html
+++ b/code/public/index.html
@@ -21,20 +21,20 @@
   <body>
     <script src="assets/demo_layout.js"></script>
 
-    <!-- <link rel="stylesheet" crossorigin href="https://g.alicdn.com/aliyun-documentation/web-chatbot-ui/0.0.24/index.css" />
+    <link rel="stylesheet" crossorigin href="https://g.alicdn.com/aliyun-documentation/web-chatbot-ui/0.0.24/index.css" />
     <script type="module" crossorigin src="https://g.alicdn.com/aliyun-documentation/web-chatbot-ui/0.0.24/index.js"></script>
     <script>
       window.CHATBOT_CONFIG = {
         endpoint: "/chat", // 可以替换为 https://{your-fc-http-trigger-domain}/chat
         displayByDefault: false, // 默认不显示 AI 助手对话框
-        title: 'AI 助手', // 自定义 AI 助手标题
+        title: '星语', // 自定义 AI 助手标题
         draggable: true, // 是否开启拖拽
         aiChatOptions: { // 自定义取值参考：https://docs.nlkit.com/nlux/reference/ui/ai-chat#conversation-options
           conversationOptions: { // 自定义取值参考：https://docs.nlkit.com/nlux/reference/ui/ai-chat#conversation-options
             conversationStarters: [
-              {prompt: '哪款手机续航最长？'},
-              {prompt: '你们有哪些手机型号？'},
-              {prompt: '有折叠屏手机吗?'},
+              {prompt: ''},
+              {prompt: ''},
+              {prompt: ''},
             ]
           },
           displayOptions: { // 自定义取值参考：https://docs.nlkit.com/nlux/reference/ui/ai-chat#display-options
@@ -43,10 +43,10 @@
           },
           personaOptions: { // 自定义取值参考：https://docs.nlkit.com/nlux/reference/ui/ai-chat#chat-personas
             assistant: {
-              name: '你好，我是你的 AI 助手',
+              name: '宝宝来啦，今天过得怎么样',
               // AI 助手的图标
               avatar: 'https://img.alicdn.com/imgextra/i2/O1CN01Pda9nq1YDV0mnZ31H_!!6000000003025-54-tps-120-120.apng',
-              tagline: '您可以尝试点击下方的快捷入口开启体验！',
+              tagline: '宝宝有兴趣的话可以尝试点击下方的快捷入口开启体验！',
             }
           },
           messageOptions: { // 自定义取值参考：https://docs.nlkit.com/nlux/reference/ui/ai-chat#message-options
@@ -65,8 +65,8 @@
           }
         }
       };
-    </script> -->
-    <!-- <style>
+    </script>
+    <style>
       :root {
         /* webchat 工具栏的颜色 */
         --webchat-toolbar-background-color: #1464E4;
@@ -85,7 +85,7 @@
         bottom: 20px;
         right: 20px;
       }
-    </style> -->
+    </style>
 
   </body>
 </html>
